5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1638_2728.log
== TEST (2019-04-11 10:24:27) 
-- CODE:
p = float(input("insira o percurso:"))
car = input("qual o tipo de carro: (A/B)")

A = p/8
B = p/12

if (car.upper() == "A"):
	print(A)
else:
	print(B)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:24:44) 
-- CODE:
p = float(input("insira o percurso:"))
car = input("qual o tipo de carro: (A/B)")

A = p/8
B = p/12

if (car.upper() == "A"):
	print(A)
else:
	print(B)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:24:54) 
-- CODE:
p = float(input("insira o percurso:"))
car = input("qual o tipo de carro: (A/B)")

A = p/8
B = p/12

if (car.upper() == "A"):
	print(A)
else:
	print(B)
-- EXECUTION TIME:
0.164997
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:25:46) 
-- CODE:
p = float(input("insira o percurso:"))
car = input("qual o tipo de carro: (A/B)")

A = p/8
B = p/12

if (car.upper() == "A"):
	print(A)
else:
	print(B)
-- EXECUTION TIME:
0.184639
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:26:26) 
-- CODE:
p = float(input("insira o percurso:"))
car = input("qual o tipo de carro: (A/B)")

A = p/8
B = p/12

if (car.upper() == "A"):
	print(round(A,2)
else:
	print(round(B,2)
-- EXECUTION TIME:
0.20145
-- ERROR:
  File "/home/codebench/codes/1638/2728/main.py", line 9
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:26:29) 
-- CODE:
p = float(input("insira o percurso:"))
car = input("qual o tipo de carro: (A/B)")

A = p/8
B = p/12

if (car.upper() == "A"):
	print(round(A,2)
else:
	print(round(B,2)
-- EXECUTION TIME:
0.171347
-- ERROR:
  File "/home/codebench/codes/1638/2728/main.py", line 9
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:26:31) 
-- CODE:
p = float(input("insira o percurso:"))
car = input("qual o tipo de carro: (A/B)")

A = p/8
B = p/12

if (car.upper() == "A"):
	print(round(A,2)
else:
	print(round(B,2)
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:26:47) 
-- CODE:
p = float(input("insira o percurso:"))
car = input("qual o tipo de carro: (A/B)")

A = p/8
B = p/12

if (car.upper() == "A"):
	print(round(A,2))
else:
	print(round(B,2))
-- EXECUTION TIME:
0.160946
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
